try to use display none instead of z-index to fix spinner bug

--- a/static/style.css
+++ b/static/style.css
@@ -105,9 +105,8 @@ body{
 }
 
 .loading{
-    display: flex;
     justify-content: center;
-    z-index: -1;
+    display: none;
 }
 
 .loading::after{
